fix: Increase form tour text contrast

--- a/frappe/public/scss/desk/driver.scss
+++ b/frappe/public/scss/desk/driver.scss
@@ -17,7 +17,7 @@ div#driver-popover-item {
 
 	.driver-popover-description {
 		font-size: var(--text-md);
-		color: var(--text-light);
+		// color: var(--text-light);
 		line-height: 20px;
 	}
 
